# zaban

./: .dockerignore  .env.example  .gitignore  README.md  VOICEPRINT_INTEGRATION_PLAN.md  compose.sh  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  env.example
frontend/: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/callback/: page.tsx
frontend/app/componenets/: APIKeysTable.tsx  GenerateKeyModal.tsx  SpeechToText.tsx
frontend/app/components/: APIKeysTable.tsx  ApiKeySettings.tsx  GenerateKeyModal.tsx  (+3 more)
voice-print-backend-plda/: API_DOCUMENTATION.md  README.md  requirements.txt
zaban_backend/: .dockerignore  .env.example  .gitignore  API_QUICK_REFERENCE.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.prod  GPU_SETUP.md  Gemfile  README.md  VOICEPRINT_API_DOCS.md  create_api_key.py  create_dummy_user.py  debug_init.py  docker-compose.yml  pyproject.toml
zaban_backend/alembic/: env.py
zaban_backend/alembic/versions/: 1329f6271609_create_users_table.py  20251017_01_add_api_keys_table.py  20251205_01_add_hashed_password_to_users.py  20251206_01_add_password_reset_tokens_table.py  20260212_01_add_voiceprint_tables.py  20260218_01_refactor_voiceprint_schema.py
zaban_backend/app/: main.py
zaban_backend/app/api/v1/: __init__.py  accent_detect.py  accent_detection_v1.py  api_keys.py  language_detection.py  stt.py  translation.py  transliteration.py  tts.py  voiceprint.py
zaban_backend/app/controllers/: application_controller.rb
zaban_backend/app/controllers/api/v1/: auth_controller.rb
zaban_backend/app/core/: api_key_auth.py  security.py
zaban_backend/app/db/: database.py
zaban_backend/app/models/: api_key.py  password_reset_token.py  user.py  voiceprint.py
zaban_backend/app/routes/: auth.py  v1.py
zaban_backend/app/schemas/: auth.py  voiceprint.py
zaban_backend/app/services/: accent_detection.py  ai4bharat.py  constants.py  email_service.py  faster_whisper_stt.py  google_oauth2.py  indicparler_tts.py  indictrans2.py  json_web_token.rb  language_detection.py  seed_cohort.py  vistaar_indicwhisper_stt.py
zaban_backend/app/services/ai4_bharat/: base_service.rb
zaban_backend/app/services/voiceprint/: __init__.py  cohort.py  config.py  plda.py  verifier.py
zaban_backend/app/services/voiceprint/utils/: audio.py  embeddings.py  xor_cipher.py
zaban_backend/app/views/layouts/: application.html.erb
zaban_backend/app/views/pwa/: manifest.json.erb
zaban_backend/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
zaban_backend/db/: schema.rb
zaban_backend/db/migrate/: 20251015115011_create_user.rb
zaban_backend/docs/: test_stt_voice.html
zaban_backend/scripts/: download_models.py  verify_model_cache.py
zaban_backend/tests/: test_accent_detect.py  test_api_key_flow_mock.py  test_api_keys_and_translate.py  test_auth.py  test_language_detection.py  test_translation.py  test_translation_auto_detect.py
(+10 files in other folders)
