[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4bharat-fastapi"
version = "0.1.0"
description = "FastAPI backend wrapping AI4Bharat endpoints: TTS, STT, translate, transliterate"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyJWT>=2.9",
  "python-dotenv>=1.0",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "torch>=2.0",
  "transformers>=4.40",
  "sentencepiece>=0.2.0",
  "sacremoses>=0.1.1",
  "IndicTransToolkit>=1.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.setuptools]
packages = ["app"]

# no entry points defined

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]


